--- a/patronus/public/mix-manifest.json
+++ b/patronus/public/mix-manifest.json
@@ -1,6 +1,7 @@
 {
   "/js/app.js": "/js/app.js",
   "/css/app.css": "/css/app.css",
+  "/js/form.js": "/js/form.js",
   "/js/jquery-2.2.3.min.js": "/js/jquery-2.2.3.min.js",
   "/js/panel.js": "/js/panel.js",
   "/js/bootstrap.min.js": "/js/bootstrap.min.js"
